@@ -7,8 +7,9 @@ _description:
      detect the insertion of a Multimedia Card (MMC) media
  STEPS:
      1. Click "Test" and insert an MMC card into the reader.
+        If a file browser opens up, you can safely close it.
         (Note: this test will time-out after 20 seconds.)
-     2. Do not unplug the device after the test.
+     2. Do not remove the device after this test.
  VERIFICATION:
      The verification of this test is automated. Do not change the
      automatically selected result.
@@ -47,8 +48,9 @@ _description:
      detect the insertion of an MMC card after the system has been suspended
  STEPS:
      1. Click "Test" and insert an MMC card into the reader.
+        If a file browser opens up, you can safely close it.
         (Note: this test will time-out after 20 seconds.)
-     2. Do not unplug the device after the test.
+     2. Do not remove the device after this test.
  VERIFICATION:
      The verification of this test is automated. Do not change the
      automatically selected result.
@@ -86,8 +88,9 @@ _description:
      detect the insertion of a Secure Digital (SD) media card
  STEPS:
      1. Click "Test" and insert an SD card into the reader.
+        If a file browser opens up, you can safely close it.
         (Note: this test will time-out after 20 seconds.)
-     2. Do not unplug the device after the test.
+     2. Do not remove the device after this test.
  VERIFICATION:
      The verification of this test is automated. Do not change the
      automatically selected result.
@@ -126,8 +129,9 @@ _description:
      detect the insertion of an SD card after the system has been suspended
  STEPS:
      1. Click "Test" and insert an SD card into the reader.
+        If a file browser opens up, you can safely close it.
         (Note: this test will time-out after 20 seconds.)
-     2. Do not unplug the device after the test.
+     2. Do not remove the device after this test.
  VERIFICATION:
      The verification of this test is automated. Do not change the
      automatically selected result.
@@ -175,8 +179,9 @@ _description:
      detect the insertion of a Secure Digital High-Capacity (SDHC) media card
  STEPS:
      1. Click "Test" and insert an SDHC card into the reader.
+        If a file browser opens up, you can safely close it.
         (Note: this test will time-out after 20 seconds.)
-     2. Do not unplug the device after the test.
+     2. Do not remove the device after this test.
  VERIFICATION:
      The verification of this test is automated. Do not change the
      automatically selected result.
@@ -215,8 +220,9 @@ _description:
      detect the insertion of an SDHC media card after the system has been suspended
  STEPS:
      1. Click "Test" and insert an SDHC card into the reader.
+        If a file browser opens up, you can safely close it.
         (Note: this test will time-out after 20 seconds.)
-     2. Do not unplug the device after the test.
+     2. Do not remove the device after this test.
  VERIFICATION:
      The verification of this test is automated. Do not change the
      automatically selected result.
@@ -254,8 +260,9 @@ _description:
      detect the insertion of a Compact Flash (CF) media card
  STEPS:
      1. Click "Test" and insert a CF card into the reader.
+        If a file browser opens up, you can safely close it.
         (Note: this test will time-out after 20 seconds.)
-     2. Do not unplug the device after the test.
+     2. Do not remove the device after this test.
  VERIFICATION:
      The verification of this test is automated. Do not change the
      automatically selected result.
@@ -294,8 +301,9 @@ _description:
      detect the insertion of a CF card after the system has been suspended
  STEPS:
      1. Click "Test" and insert a CF card into the reader.
+        If a file browser opens up, you can safely close it.
         (Note: this test will time-out after 20 seconds.)
-     2. Do not unplug the device after the test.
+     2. Do not remove the device after this test.
  VERIFICATION:
      The verification of this test is automated. Do not change the
      automatically selected result.
@@ -333,8 +341,9 @@ _description:
      detect the insertion of a Secure Digital Extended Capacity (SDXC) media card
  STEPS:
      1. Click "Test" and insert a SDXC card into the reader.
+        If a file browser opens up, you can safely close it.
         (Note: this test will time-out after 20 seconds.)
-     2. Do not unplug the device after the test.
+     2. Do not remove the device after this test.
  VERIFICATION:
      The verification of this test is automated. Do not change the
      automatically selected result.
@@ -373,8 +382,9 @@ _description:
      detect the insertion of a SDXC card after the system has been suspended
  STEPS:
      1. Click "Test" and insert a SDXC card into the reader.
+        If a file browser opens up, you can safely close it.
         (Note: this test will time-out after 20 seconds.)
-     2. Do not unplug the device after the test.
+     2. Do not remove the device after this test.
  VERIFICATION:
      The verification of this test is automated. Do not change the
      automatically selected result.
@@ -398,6 +408,7 @@ _description:
      of a SDXC card from the systems card reader after the system has been suspended.
  STEPS:
      1. Click "Test" and remove the SDXC card from the reader.
+        If a file browser opens up, you can safely close it.
         (Note: this test will time-out after 20 seconds.)
  VERIFICATION:
      The verification of this test is automated. Do not change the
@@ -412,8 +423,9 @@ _description:
      detect the insertion of a Memory Stick (MS) media card
  STEPS:
      1. Click "Test" and insert a MS card into the reader.
+        If a file browser opens up, you can safely close it.
         (Note: this test will time-out after 20 seconds.)
-     2. Do not unplug the device after the test.
+     2. Do not remove the device after this test.
  VERIFICATION:
      The verification of this test is automated. Do not change the
      automatically selected result.
@@ -452,8 +464,9 @@ _description:
      detect the insertion of a MS card after the system has been suspended
  STEPS:
      1. Click "Test" and insert a MS card into the reader.
+        If a file browser opens up, you can safely close it.
         (Note: this test will time-out after 20 seconds.)
-     2. Do not unplug the device after the test.
+     2. Do not remove the device after this test.
  VERIFICATION:
      The verification of this test is automated. Do not change the
      automatically selected result.
@@ -491,8 +504,9 @@ _description:
      detect the insertion of a Memory Stick Pro (MSP) media card
  STEPS:
      1. Click "Test" and insert a MSP card into the reader.
+        If a file browser opens up, you can safely close it.
         (Note: this test will time-out after 20 seconds.)
-     2. Do not unplug the device after the test.
+     2. Do not remove the device after this test.
  VERIFICATION:
      The verification of this test is automated. Do not change the
      automatically selected result.
@@ -531,8 +545,9 @@ _description:
      detect the insertion of a MSP card after the system has been suspended
  STEPS:
      1. Click "Test" and insert a MSP card into the reader.
+        If a file browser opens up, you can safely close it.
         (Note: this test will time-out after 20 seconds.)
-     2. Do not unplug the device after the test.
+     2. Do not remove the device after this test.
  VERIFICATION:
      The verification of this test is automated. Do not change the
      automatically selected result.
@@ -570,8 +585,9 @@ _description:
      detect the insertion of a Extreme Digital (xD) media card
  STEPS:
      1. Click "Test" and insert a xD card into the reader.
+        If a file browser opens up, you can safely close it.
         (Note: this test will time-out after 20 seconds.)
-     2. Do not unplug the device after the test.
+     2. Do not remove the device after this test.
  VERIFICATION:
      The verification of this test is automated. Do not change the
      automatically selected result.
@@ -610,8 +626,9 @@ _description:
      detect the insertion of a xD card after the system has been suspended
  STEPS:
      1. Click "Test" and insert a xD card into the reader.
+        If a file browser opens up, you can safely close it.
         (Note: this test will time-out after 20 seconds.)
-     2. Do not unplug the device after the test.
+     2. Do not remove the device after this test.
  VERIFICATION:
      The verification of this test is automated. Do not change the
      automatically selected result.
